# moka-1

./: .gitignore  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  README.ja.md  README.md  compose.e2e.yaml  compose.tunnel.yaml  compose.yaml
eval/: CONTEXT.md  README.md  pyproject.toml
eval/data/articles/: manifest.json  recap-week-1.json  recap-week-2.json  recap-week-3.json
eval/data/retrieval/: queries.json
eval/prompts/: judge_pairwise_ja.txt  recap_ja.txt  summarize_ja.txt  tags_ja.txt
eval/results/d1-lfm25-summ/: generations.jsonl  run.json
eval/results/d1-lfm25-timing/: generations.jsonl  run.json
eval/results/d1-qwen4b-summ/: generations.jsonl  run.json
eval/results/d1-qwen4b-timing/: generations.jsonl  run.json
eval/results/d2-gptoss-recap/: generations.jsonl  run.json
eval/results/d3-gemma26-recap/: generations.jsonl  run.json
eval/results/d3-qwen35-recap/: generations.jsonl  run.json
eval/results/d3-qwen36-recap/: generations.jsonl  run.json
eval/results/d5-lfm25-tags/: generations.jsonl  run.json
eval/results/d5-qwen4b-tags/: generations.jsonl  run.json
eval/results/judgments/: d1-summarize.claude.verdicts.jsonl  d1-summarize.gptoss20b.verdicts.jsonl  d2-gptoss-vs-g26.claude.verdicts.jsonl  d2-gptoss-vs-q36.claude.verdicts.jsonl  d3-q35-vs-g26.claude.verdicts.jsonl  d3-q35-vs-g26.gptoss20b.verdicts.jsonl  d3-q36-vs-g26.claude.verdicts.jsonl  d3-q36-vs-g26.gptoss20b.verdicts.jsonl  d3-q36-vs-q35.claude.verdicts.jsonl  d3-q36-vs-q35.gptoss20b.verdicts.jsonl  d5-tags.claude.verdicts.jsonl  d5-tags.gptoss20b.verdicts.jsonl  promptab-summarize.claude.verdicts.jsonl
eval/results/pairs/: d1-summarize.json  d1-summarize.key.json  d2-gptoss-vs-g26.json  d2-gptoss-vs-g26.key.json  d2-gptoss-vs-q36.json  d2-gptoss-vs-q36.key.json  d3-q35-vs-g26.json  d3-q35-vs-g26.key.json  d3-q36-vs-g26.json  d3-q36-vs-g26.key.json  d3-q36-vs-q35.json  d3-q36-vs-q35.key.json  d5-tags.json  d5-tags.key.json  promptab-summarize.json  promptab-summarize.key.json
eval/results/promptab-a/: generations.jsonl  run.json
eval/results/promptab-b/: generations.jsonl  run.json
eval/results/research/: embedding-candidates.json  local-judge.json  moa-theory.json  new-models-sweep.json  uma-vram.json
eval/results/summary/: bench-gemma4-26b.json  bench-gemma4-e4b.json  bench-gptoss20b.json  bench-lfm25.json  bench-np3-gemma4-e4b.json  bench-np3-lfm25.json  bench-np3-qwen35-4b.json  bench-qwen35-35b.json  bench-qwen35-4b.json  bench-qwen36-35b.json  d1-summarize.json  d2-gptoss-vs-g26.json  d2-gptoss-vs-q36.json  d3-q35-vs-g26.json  d3-q36-vs-g26.json  d3-q36-vs-q35.json  d5-tags.json  (+11 more)
eval/tests/: test_bench.py  test_embed_metrics.py  test_judge.py  test_resume.py  test_scoring.py  test_think_split.py  test_verdict_extract.py
plecto/filters/: .gitignore  Cargo.toml
(+295 files in other folders)
