[project]
name = "moka-eval"
version = "0.1.0"
description = "moka-1 LLM model-selection eval harness (speed, quality A/B, embedding retrieval)"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28", "pydantic>=2.11"]

[project.scripts]
moka-eval = "moka_eval.cli:main"

[dependency-groups]
dev = ["pytest>=8.4", "pyrefly>=1.0", "ruff>=0.14"]
dataset = ["trafilatura>=2.0"]

[build-system]
requires = ["uv_build>=0.10"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "SIM", "N", "I", "ANN", "S", "PTH", "C4", "ASYNC", "TRY", "RUF"]
# RUF001-003: 日本語コメント・docstring の全角記号(×・()等)は意図的
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# S101: pytest asserts / S311: non-crypto RNG for blinding is intentional (seeded, reproducible)
"tests/*" = ["S101"]
"src/moka_eval/judge.py" = ["S311"]
# S603/S607: subprocess runs docker with internally-constructed constant args only
"src/moka_eval/server.py" = ["S603", "S607"]
"src/moka_eval/gpu.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
