[package]
name = "ratelimit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "moka-1 レート制限フィルタ — x-real-ip を key に host-ratelimit を消費する"

[lib]
crate-type = ["cdylib", "rlib"] # rlib は native `cargo test` 用(wasm 配布物は cdylib)

[dependencies]
wit-bindgen.workspace = true
