[package]
name = "session-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "moka-1 セッション認証フィルタ — HMAC 署名 cookie の検証のみ(ADR00021)"

[lib]
crate-type = ["cdylib", "rlib"] # rlib は native `cargo test` 用(wasm 配布物は cdylib)

[dependencies]
wit-bindgen.workspace = true
# HMAC-SHA256 検証。すべて pure Rust(wasm32-unknown-unknown で追加 import を生まない)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
